5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1684_1100.log
== TEST (2019-04-29 15:42:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("qual o valor da nota? "))
if(nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100):
	

-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("qual o valor da nota? "))
if(nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100):
	

-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("qual o valor da nota? "))
if(nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100):
-- ERROR:
File "XXXX", line 6
    
                                                                                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:48:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("qual o valor da nota? "))
if(nota == 2):
	print(Tartaruga)
else:
	print(invalido)
		if(nota == 5):
			print(Garça)
		else:
			print(invalido)
				if(nota == 10):
					print(Arara)
				else:
					print(invalido)
						if(nota == 20):
							print(Mico-leão-dourado)
						else:
							print(invalido)
								if(nota == 50):
									print(Onça-pintada)
								else:
									print(invalido)
										if(nota == 100):
											print(Garoupa)
										else:
											print(invalido)
	
-- ERROR:
File "XXXX", line 9
    if(nota == 5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:56:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("qual o valor da nota? "))
if(nota == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(nota == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(nota == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(nota == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(nota == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
eliff(nota == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- ERROR:
File "XXXX", line 20
    eliff(nota == 100):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:56:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("qual o valor da nota? "))
if(nota == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(nota == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(nota == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(nota == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(nota == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
elif(nota == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print("Entrada: ", a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:57:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(nota == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(nota == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(nota == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(nota == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(nota == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
elif(nota == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nota == 2):
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:57:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(nota == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(nota == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(nota == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(nota == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
elif(nota == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(nota == 5):
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:58:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(nota == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(nota == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(nota == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(nota == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
elif(nota == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.201928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1100/main.py", line 8, in <module>
    elif(nota == 5):
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:58:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(nota == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(nota == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(nota == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(nota == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
elif(nota == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(nota == 5):
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:58:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(nota == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(nota == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(nota == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(nota == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
elif(nota == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(nota == 5):
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:59:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leão-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onça-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:59:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leoo-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:59:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leoo-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.139116
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:01:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leoo-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:02:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leoo-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada: ", a)
	print("Animal: Invalido")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:02:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leoo-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada: ", a)
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.159664
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:24:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leao-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada: ", a)
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.206217
-- ERROR:
  File "/home/codebench/codes/1684/1100/main.py", line 23
    else(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:25:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leao-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada: ", a)
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.157041
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
